# Oikos

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/commands/: design-audit.md  feature.md  perf-audit.md  review.md  score-tuning.md  ship.md
.next/: trace  trace-build
scraper/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alerts.py  cleanup_expensive.py  config.py  db.py  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  scoring.py  validators.py
scraper/scrapers/: base.py  bienici.py  leboncoin.py  pap.py
scraper/tests/: conftest.py  test_alerts.py  test_base.py  test_config.py  test_scoring.py  test_scrapers.py  test_validators.py
supabase/: CLAUDE.md  cleanup_expensive.sql  migration_002_map_and_history.sql  migration_003_stats_rpc.sql  migration_004_scraper_runs.sql  schema.sql
web/: CLAUDE.md  Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/favorites/: page.tsx
web/src/app/listing/[id]/: page.tsx
web/src/app/map/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/stats/: page.tsx
web/src/components/: AppSidebar.tsx  BottomNav.tsx  DesktopHeader.tsx  ErrorState.tsx  Filters.tsx  ListingCard.tsx  ListingSkeleton.tsx  PhotoGallery.tsx  ScoreBadge.tsx  Toast.tsx
web/src/components/ui/: button.tsx
web/src/hooks/: use-alerts.ts  use-favorites.ts  use-listings.ts
web/src/lib/: data.ts  mock-data.ts  types.ts  utils.ts
